# backend/alembic/versions/50b4b0f465fa_initial_migration_with_product_type.py
@@ -1,8 +1,8 @@
-"""initial migration
+"""initial_migration_with_product_type
 
-Revision ID: 5bce098bbdc9
+Revision ID: 50b4b0f465fa
 Revises:
-Create Date: 2026-01-07 11:23:51.698687
+Create Date: 2026-01-10 22:55:14.286404
 
 """
 from typing import Sequence, Union
@@ -13,7 +13,7 @@ import sqlmodel
 
 
 # revision identifiers, used by Alembic.
-revision: str = '5bce098bbdc9'
+revision: str = '50b4b0f465fa'
 down_revision: Union[str, Sequence[str], None] = None
 branch_labels: Union[str, Sequence[str], None] = None
 depends_on: Union[str, Sequence[str], None] = None
@@ -22,6 +22,18 @@ depends_on: Union[str, Sequence[str], None] = None
 def upgrade() -> None:
     """Upgrade schema."""
     # ### commands auto generated by Alembic - please adjust! ###
+    op.create_table('producttype',
+    sa.Column('id', sa.Uuid(), nullable=False),
+    sa.Column('code', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=False),
+    sa.Column('name_en', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=True),
+    sa.Column('name_fr', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=True),
+    sa.Column('is_active', sa.Boolean(), nullable=False),
+    sa.Column('created_at', sa.DateTime(timezone=True), nullable=True),
+    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
+    sa.PrimaryKeyConstraint('id', name=op.f('pk_producttype'))
+    )
+    op.create_index(op.f('ix_producttype_code'), 'producttype', ['code'], unique=True)
+    op.create_index(op.f('ix_producttype_is_active'), 'producttype', ['is_active'], unique=False)
     op.create_table('user',
     sa.Column('id', sa.Uuid(), nullable=False),
     sa.Column('email', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=False),
@@ -40,6 +52,7 @@ def upgrade() -> None:
     op.create_table('product',
     sa.Column('id', sa.Uuid(), nullable=False),
     sa.Column('created_by_id', sa.Uuid(), nullable=False),
+    sa.Column('product_type_id', sa.Uuid(), nullable=False),
     sa.Column('brand_name_en', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=True),
     sa.Column('brand_name_fr', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=True),
     sa.Column('registration_number', sqlmodel.sql.sqltypes.AutoString(length=255), nullable=False),
@@ -48,13 +61,16 @@ def upgrade() -> None:
     sa.Column('created_at', sa.DateTime(timezone=True), nullable=True),
     sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
     sa.ForeignKeyConstraint(['created_by_id'], ['user.id'], name=op.f('fk_product_created_by_id_user')),
+    sa.ForeignKeyConstraint(['product_type_id'], ['producttype.id'], name=op.f('fk_product_product_type_id_producttype')),
     sa.PrimaryKeyConstraint('id', name=op.f('pk_product'))
     )
     op.create_index(op.f('ix_product_created_by_id'), 'product', ['created_by_id'], unique=False)
+    op.create_index(op.f('ix_product_product_type_id'), 'product', ['product_type_id'], unique=False)
     op.create_index(op.f('ix_product_registration_number'), 'product', ['registration_number'], unique=True)
     op.create_table('label',
     sa.Column('id', sa.Uuid(), nullable=False),
     sa.Column('product_id', sa.Uuid(), nullable=True),
+    sa.Column('product_type_id', sa.Uuid(), nullable=False),
     sa.Column('created_by_id', sa.Uuid(), nullable=False),
     sa.Column('extraction_status', sa.Enum('pending', 'in_progress', 'completed', 'failed', name='extractionstatus'), nullable=False),
     sa.Column('verification_status', sa.Enum('not_started', 'in_progress', 'completed', name='verificationstatus'), nullable=False),
@@ -63,11 +79,13 @@ def upgrade() -> None:
     sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
     sa.ForeignKeyConstraint(['created_by_id'], ['user.id'], name=op.f('fk_label_created_by_id_user')),
     sa.ForeignKeyConstraint(['product_id'], ['product.id'], name=op.f('fk_label_product_id_product')),
+    sa.ForeignKeyConstraint(['product_type_id'], ['producttype.id'], name=op.f('fk_label_product_type_id_producttype')),
     sa.PrimaryKeyConstraint('id', name=op.f('pk_label'))
     )
     op.create_index(op.f('ix_label_created_by_id'), 'label', ['created_by_id'], unique=False)
     op.create_index(op.f('ix_label_extraction_status'), 'label', ['extraction_status'], unique=False)
     op.create_index(op.f('ix_label_product_id'), 'label', ['product_id'], unique=False)
+    op.create_index(op.f('ix_label_product_type_id'), 'label', ['product_type_id'], unique=False)
     op.create_index(op.f('ix_label_verification_status'), 'label', ['verification_status'], unique=False)
     op.create_table('fertilizerlabeldata',
     sa.Column('id', sa.Uuid(), nullable=False),
@@ -153,14 +171,19 @@ def downgrade() -> None:
     op.drop_index(op.f('ix_fertilizerlabeldata_label_id'), table_name='fertilizerlabeldata')
     op.drop_table('fertilizerlabeldata')
     op.drop_index(op.f('ix_label_verification_status'), table_name='label')
+    op.drop_index(op.f('ix_label_product_type_id'), table_name='label')
     op.drop_index(op.f('ix_label_product_id'), table_name='label')
     op.drop_index(op.f('ix_label_extraction_status'), table_name='label')
     op.drop_index(op.f('ix_label_created_by_id'), table_name='label')
     op.drop_table('label')
     op.drop_index(op.f('ix_product_registration_number'), table_name='product')
+    op.drop_index(op.f('ix_product_product_type_id'), table_name='product')
     op.drop_index(op.f('ix_product_created_by_id'), table_name='product')
     op.drop_table('product')
     op.drop_index(op.f('ix_user_external_id'), table_name='user')
     op.drop_index(op.f('ix_user_email'), table_name='user')
     op.drop_table('user')
+    op.drop_index(op.f('ix_producttype_is_active'), table_name='producttype')
+    op.drop_index(op.f('ix_producttype_code'), table_name='producttype')
+    op.drop_table('producttype')
     # ### end Alembic commands ###
