# backend/app/db/models/__init__.py
@@ -3,6 +3,7 @@ from app.db.models.label import Label
 from app.db.models.label_data import LabelData
 from app.db.models.label_image import LabelImage
 from app.db.models.product import Product
+from app.db.models.product_type import ProductType
 from app.db.models.user import User
 
 __all__ = [
@@ -11,5 +12,6 @@ __all__ = [
     "LabelData",
     "LabelImage",
     "Product",
+    "ProductType",
     "User",
 ]
